# vcdb-analysis

./: .gitignore  01__dtypes.ipynb  01__vcdb.ipynb  02__dataset.ipynb  02__dtypes.ipynb  03__cleaning.ipynb  03__dataset.ipynb  03__dropna.ipynb  03__overview.ipynb  04__cleaning.ipynb  05__data_selection.ipynb  05__transformation.ipynb  06__descriptive.ipynb  06__exploratory.ipynb  06__year_distribution.ipynb  07__action_distribution.ipynb  07__trends.ipynb  10__action_distribution_percentage.ipynb  20__action_year_trend.ipynb  30__details_year_trend.ipynb  99__snippets.ipynb  README.md  all.ipynb  helper.py  pyproject.toml  transformation.py
